# togo_manager

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  annotated_dup.js  class_task_manager-members.html  class_task_manager.html  class_task_manager.js  classdoctest_1_1_assert_data_1_1_string_contains-members.html  classdoctest_1_1_assert_data_1_1_string_contains.html  classdoctest_1_1_contains-members.html  classdoctest_1_1_contains.html  classdoctest_1_1_context-members.html  classdoctest_1_1_context.html  classdoctest_1_1_string-members.html  classdoctest_1_1_string.html  classdoctest_1_1_string.js  classdoctest_1_1detail_1_1_context_scope-members.html  classdoctest_1_1detail_1_1_context_scope.html  classdoctest_1_1detail_1_1_exception_translator-members.html  classdoctest_1_1detail_1_1_exception_translator.html  classes.html  classstd_1_1basic__istream.html  classstd_1_1basic__ostream.html  classstd_1_1tuple.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doctest_8h.html  doctest_8h.js  doctest_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  (+194 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  (+27 more)
src/: main.cpp  task_manager.cpp  task_manager.h
tests/: task_manager_tests.cpp
